--- a/registration.html
+++ b/registration.html
@@ -22,6 +22,10 @@
             <label for="email">Email </label>
                 <input type="email" id="email" name="email" required>
         </div>
+        <div class="input-grp">
+            <label for="password">Password </label>
+                <input type="password" id="pwd" name="pwd" required>
+        </div>
         <button type="submit">Register</button>
     </form>
    </div>
